<package>
    <name>people_msgs_utils</name>
    <version>1.0.0</version>
    <description>people_msgs_utils package</description>
    <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
    <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>people_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>

    <run_depend>geometry_msgs</run_depend>
    <run_depend>people_msgs</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>
</package>
