<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>people_msgs_utils</name>
    <version>1.0.0</version>
    <description>people_msgs_utils package</description>
    <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
    <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>

    <depend>geometry_msgs</depend>
    <depend>people_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
</package>
